# test

./: .vimrc  CMakeLists.txt  bank-client.cpp  bank-server.cpp  bank.capnp  bank.cpp  bank.hpp  benchmark.cpp  client.hpp  client_id.hpp  client_manager_processor.hpp  server.cpp  spinlock.hpp  transfer_processor.hpp
tests/: bank_test.cpp  capnp_mock.hpp  client_test.cpp  transfer_processor_test.cpp
